Closed
Bug 1893797
Opened 2 years ago
Closed 2 years ago
Perma spidermonkey /builds/worker/checkouts/gecko/js/src/builtin/DataViewObject.cpp:514:13: error: unused function 'WebIDLCast<js::float16>' [-Werror,-Wunused-function] when Gecko 127 merges to beta on 2024-05-13
Categories
(Core :: JavaScript: Standard Library, defect)
Core
JavaScript: Standard Library
Tracking
()
VERIFIED
FIXED
127 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox125 | --- | unaffected |
| firefox126 | --- | unaffected |
| firefox127 | + | fixed |
People
(Reporter: ctuns, Assigned: dminor)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
[Tracking Requested - why for this release]:
Central-as-beta simulation:
How to run these simulations:
Failure log
[task 2024-04-27T10:47:57.522Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/config/external/icu/i18n'
[task 2024-04-27T10:47:57.526Z] config/external/icu/i18n/utf8collationiterator.o
[task 2024-04-27T10:47:57.527Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/config/external/icu/i18n'
[task 2024-04-27T10:47:57.576Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/config/external/icu/i18n'
[task 2024-04-27T10:47:57.578Z] /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -o utf16collationiterator.o -c -I/builds/worker/workspace/obj-spider/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -ftrivial-auto-var-init=pattern -DDEBUG=1 -DU_I18N_IMPLEMENTATION -DU_USING_ICU_NAMESPACE=0 -DU_NO_DEFAULT_INCLUDE_UTF_HEADERS=1 -DU_HIDE_OBSOLETE_UTF_OLD_H=1 -DUCONFIG_NO_LEGACY_CONVERSION -DUCONFIG_NO_TRANSLITERATION -DUCONFIG_NO_REGULAR_EXPRESSIONS -DUCONFIG_NO_BREAK_ITERATION -DU_CHARSET_IS_UTF8 -DUNISTR_FROM_CHAR_EXPLICIT=explicit -DUNISTR_FROM_STRING_EXPLICIT=explicit -DU_ENABLE_DYLOAD=0 -DU_DEBUG=1 -I/builds/worker/checkouts/gecko/config/external/icu/i18n -I/builds/worker/workspace/obj-spider/config/external/icu/i18n -I/builds/worker/checkouts/gecko/intl/icu/source/common -I/builds/worker/checkouts/gecko/mfbt/double-conversion -I/builds/worker/workspace/obj-spider/dist/include -I/builds/worker/workspace/obj-spider/dist/include/nspr -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-spider/js/src/js-confdefs.h -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-spider/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fno-omit-frame-pointer -funwind-tables -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wenum-compare-conditional -Wenum-float-conversion -Wno-deprecated-anon-enum-enum-conversion -Wno-deprecated-enum-enum-conversion -Wno-deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-unknown-warning-option -frtti -Wno-comma -Wno-implicit-const-int-float-conversion -Wno-macro-redefined -Wno-microsoft-include -Wno-tautological-unsigned-enum-zero-compare -Wno-unreachable-code-loop-increment -Wno-unreachable-code-return -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/utf16collationiterator.o.pp /builds/worker/checkouts/gecko/intl/icu/source/i18n/utf16collationiterator.cpp
[task 2024-04-27T10:47:57.580Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/config/external/icu/i18n'
[task 2024-04-27T10:47:57.581Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/config/external/icu/i18n'
[task 2024-04-27T10:47:57.582Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/config/external/icu/i18n'
[task 2024-04-27T10:47:57.583Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/config/external/icu/i18n'
[task 2024-04-27T10:47:57.584Z] config/external/icu/i18n/utmscale.o
[task 2024-04-27T10:47:57.588Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/config/external/icu/i18n'
[task 2024-04-27T10:47:57.628Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/config/external/icu/i18n'
[task 2024-04-27T10:47:57.629Z] /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -o utmscale.o -c -I/builds/worker/workspace/obj-spider/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -ftrivial-auto-var-init=pattern -DDEBUG=1 -DU_I18N_IMPLEMENTATION -DU_USING_ICU_NAMESPACE=0 -DU_NO_DEFAULT_INCLUDE_UTF_HEADERS=1 -DU_HIDE_OBSOLETE_UTF_OLD_H=1 -DUCONFIG_NO_LEGACY_CONVERSION -DUCONFIG_NO_TRANSLITERATION -DUCONFIG_NO_REGULAR_EXPRESSIONS -DUCONFIG_NO_BREAK_ITERATION -DU_CHARSET_IS_UTF8 -DUNISTR_FROM_CHAR_EXPLICIT=explicit -DUNISTR_FROM_STRING_EXPLICIT=explicit -DU_ENABLE_DYLOAD=0 -DU_DEBUG=1 -I/builds/worker/checkouts/gecko/config/external/icu/i18n -I/builds/worker/workspace/obj-spider/config/external/icu/i18n -I/builds/worker/checkouts/gecko/intl/icu/source/common -I/builds/worker/checkouts/gecko/mfbt/double-conversion -I/builds/worker/workspace/obj-spider/dist/include -I/builds/worker/workspace/obj-spider/dist/include/nspr -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-spider/js/src/js-confdefs.h -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-spider/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fno-omit-frame-pointer -funwind-tables -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wenum-compare-conditional -Wenum-float-conversion -Wno-deprecated-anon-enum-enum-conversion -Wno-deprecated-enum-enum-conversion -Wno-deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-unknown-warning-option -frtti -Wno-comma -Wno-implicit-const-int-float-conversion -Wno-macro-redefined -Wno-microsoft-include -Wno-tautological-unsigned-enum-zero-compare -Wno-unreachable-code-loop-increment -Wno-unreachable-code-return -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/utmscale.o.pp /builds/worker/checkouts/gecko/intl/icu/source/i18n/utmscale.cpp
[task 2024-04-27T10:47:57.630Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/config/external/icu/i18n'
[task 2024-04-27T10:47:57.631Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/config/external/icu/i18n'
[task 2024-04-27T10:47:57.632Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/config/external/icu/i18n'
[task 2024-04-27T10:47:57.640Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/config/external/icu/i18n'
[task 2024-04-27T10:47:57.641Z] config/external/icu/i18n/vtzone.o
[task 2024-04-27T10:47:57.642Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/config/external/icu/i18n'
[task 2024-04-27T10:47:58.168Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/js/src'
[task 2024-04-27T10:47:58.168Z] /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -o DataViewObject.o -c -I/builds/worker/workspace/obj-spider/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -ftrivial-auto-var-init=pattern -DDEBUG=1 -DWASM_SUPPORTS_HUGE_MEMORY -DJS_CACHEIR_SPEW -DJS_STRUCTURED_SPEW -DEXPORT_JS_API -DMOZ_HAS_MOZGLUE -I/builds/worker/checkouts/gecko/js/src -I/builds/worker/workspace/obj-spider/js/src -I/builds/worker/checkouts/gecko/intl/icu_capi/c/include -I/builds/worker/workspace/obj-spider/dist/include -I/builds/worker/workspace/obj-spider/dist/include/nspr -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-spider/js/src/js-confdefs.h -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-spider/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fno-omit-frame-pointer -funwind-tables -Werror -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wenum-compare-conditional -Wenum-float-conversion -Wno-deprecated-anon-enum-enum-conversion -Wno-deprecated-enum-enum-conversion -Wno-deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-unknown-warning-option -Werror=format -fstandalone-debug -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/DataViewObject.o.pp /builds/worker/checkouts/gecko/js/src/builtin/DataViewObject.cpp
[task 2024-04-27T10:47:58.169Z] /builds/worker/checkouts/gecko/js/src/builtin/DataViewObject.cpp:514:13: error: unused function 'WebIDLCast<js::float16>' [-Werror,-Wunused-function]
[task 2024-04-27T10:47:58.169Z] 514 | inline bool WebIDLCast<float16>(JSContext* cx, HandleValue value,
[task 2024-04-27T10:47:58.169Z] | ^~~~~~~~~~~~~~~~~~~
[task 2024-04-27T10:47:58.169Z] 1 error generated.
[task 2024-04-27T10:47:58.169Z] gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:689: DataViewObject.o] Error 1
[task 2024-04-27T10:47:58.169Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/js/src'
[task 2024-04-27T10:47:58.176Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/js/src'
[task 2024-04-27T10:47:58.176Z] js/src/Eval.o
[task 2024-04-27T10:47:58.176Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/js/src'
[task 2024-04-27T10:47:58.428Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/config/external/icu/common'
[task 2024-04-27T10:47:58.428Z] /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -o ustring.o -c -I/builds/worker/workspace/obj-spider/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -ftrivial-auto-var-init=pattern -DDEBUG=1 -DU_COMMON_IMPLEMENTATION -DU_USING_ICU_NAMESPACE=0 -DU_NO_DEFAULT_INCLUDE_UTF_HEADERS=1 -DU_HIDE_OBSOLETE_UTF_OLD_H=1 -DUCONFIG_NO_LEGACY_CONVERSION -DUCONFIG_NO_TRANSLITERATION -DUCONFIG_NO_REGULAR_EXPRESSIONS -DUCONFIG_NO_BREAK_ITERATION -DU_CHARSET_IS_UTF8 -DUNISTR_FROM_CHAR_EXPLICIT=explicit -DUNISTR_FROM_STRING_EXPLICIT=explicit -DU_ENABLE_DYLOAD=0 -DU_DEBUG=1 -I/builds/worker/checkouts/gecko/config/external/icu/common -I/builds/worker/workspace/obj-spider/config/external/icu/common -I/builds/worker/checkouts/gecko/intl/icu/source/i18n -I/builds/worker/workspace/obj-spider/dist/include -I/builds/worker/workspace/obj-spider/dist/include/nspr -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-spider/js/src/js-confdefs.h -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-spider/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fno-omit-frame-pointer -funwind-tables -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wenum-compare-conditional -Wenum-float-conversion -Wno-deprecated-anon-enum-enum-conversion -Wno-deprecated-enum-enum-conversion -Wno-deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-unknown-warning-option -frtti -Wno-comma -Wno-implicit-const-int-float-conversion -Wno-macro-redefined -Wno-microsoft-include -Wno-tautological-unsigned-enum-zero-compare -Wno-unreachable-code-loop-increment -Wno-unreachable-code-return -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/ustring.o.pp /builds/worker/checkouts/gecko/intl/icu/source/common/ustring.cpp
[task 2024-04-27T10:47:58.429Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/config/external/icu/common'
[task 2024-04-27T10:47:58.429Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/config/external/icu/common'
[task 2024-04-27T10:47:58.429Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/config/external/icu/common'
[task 2024-04-27T10:47:58.429Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/config/external/icu/common'
Flags: needinfo?(dminor)
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
Assignee: nobody → dminor
Flags: needinfo?(dminor)
| Assignee | ||
Comment 1•2 years ago
|
||
| Reporter | ||
Updated•2 years ago
|
Summary: Perma spidermonkey /builds/worker/checkouts/gecko/js/src/builtin/DataViewObject.cpp:514:13: error: unused function 'WebIDLCast<js::float16>' [-Werror,-Wunused-function] when Gecko 127 switches from Early Beta to Late Beta on 2024-05-24 → Perma spidermonkey /builds/worker/checkouts/gecko/js/src/builtin/DataViewObject.cpp:514:13: error: unused function 'WebIDLCast<js::float16>' [-Werror,-Wunused-function] when Gecko 127 merges to beta on 2024-05-13
Pushed by dminor@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6b3704a51804
Only define WebIDLCast<js::float16> for nightly builds; r=anba
Comment 3•2 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 127 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•