Bug 1893797 - Only define WebIDLCast<js::float16> for nightly builds; r=anba

Differential Revision: https://phabricator.services.mozilla.com/D208921